# AMAG-Neural-Forecasting

./: .gitignore  CLAUDE.md  README.md  TASK.md  V3_IMPLEMENTATION.md  pyproject.toml  run_train.py
src/amag/: adjacency.py  config.py  data.py  evaluate.py  losses.py  model.py  train.py
src/amag/modules/: revin.py  temporal_encoding.py  temporal_readout.py
submission/: model.py
submission/seed_123/: amag_affi_best.pth  amag_affi_ema_best.pth  amag_affi_snap1.pth  amag_affi_snap2.pth  amag_affi_snap3.pth  amag_affi_snap4.pth  amag_affi_snap5.pth  amag_beignet_best.pth  amag_beignet_ema_best.pth  amag_beignet_snap1.pth  amag_beignet_snap2.pth  amag_beignet_snap3.pth  amag_beignet_snap4.pth  amag_beignet_snap5.pth  norm_stats_affi.npz  norm_stats_beignet.npz
submission/seed_42/: amag_affi_best.pth  amag_affi_ema_best.pth  amag_affi_snap1.pth  amag_affi_snap2.pth  amag_affi_snap3.pth  amag_affi_snap4.pth  amag_affi_snap5.pth  amag_beignet_best.pth  amag_beignet_ema_best.pth  amag_beignet_snap1.pth  amag_beignet_snap2.pth  amag_beignet_snap3.pth  amag_beignet_snap4.pth  amag_beignet_snap5.pth
submission/seed_456/: amag_affi_best.pth  amag_affi_ema_best.pth  amag_affi_snap1.pth  amag_affi_snap2.pth  amag_affi_snap3.pth  amag_affi_snap4.pth  amag_affi_snap5.pth  amag_beignet_best.pth  amag_beignet_ema_best.pth  amag_beignet_snap1.pth  amag_beignet_snap2.pth  amag_beignet_snap3.pth  amag_beignet_snap4.pth  amag_beignet_snap5.pth
training/: run_train.py
training/amag/: model.py
training/amag/modules/: channel_attention.py  dann.py  dish_ts.py  temporal_encoding.py  (+1 more)
